--- a/greengrass_ml_inference.ipynb
+++ b/greengrass_ml_inference.ipynb
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "# バケットが存在している場合は事前に削除\n",
-    "bucket = 'ggml-gokazu-20210610' # <- グローバルでユニークなS3バケット名を入力\n",
+    "bucket = 'type your great bucket name' # <- グローバルでユニークなS3バケット名を入力\n",
     "!aws s3 rb s3://{bucket} --force\n",
     "# バケット作成\n",
     "location = {'LocationConstraint': region}\n",
